fixtures/fail/naming-and-readme/naming-and-readme.php
<?php
/**
 * Plugin Name: Naming and Readme Fixture
 * Description: Failing fixture for naming and readme tag count.
 * Version: 1.2.0
 * Author: Sant Limited
 * Text Domain: naming-and-readme
 */

defined( 'ABSPATH' ) || exit;

function _naming_and_readme_helper() {
	return 'bad';
}
